--- a/src/Server/services/menu.api/Menu.API/appsettings.Development.json
+++ b/src/Server/services/menu.api/Menu.API/appsettings.Development.json
@@ -14,22 +14,5 @@
             "Steeltoe": "Debug"
         }
     },
-    "AllowedHosts": "*",
-
-    "spring": {
-        "application": {
-            "name": "menu-service"
-        }
-    },
-    "eureka": {
-        "client": {
-            "serviceUrl": "http://localhost:8761/eureka/",
-            "shouldRegisterWithEureka": true,
-            "shouldFetchRegistry": false,
-            "ValidateCertificates": false
-        },
-        "instance": {
-            "port": 5100
-        }
-    }
+    "AllowedHosts": "*"
 }
