--- a/src/Server/docker-compose.override.yml
+++ b/src/Server/docker-compose.override.yml
@@ -1,10 +1,13 @@
-version: '3.7'
+version: '3'
 
 services:
   gateway-api:
-    environment:
-       - REGISTRY_HOST=service-discovery
-
+    environment: 
+      - IDENTITY_URL=http://identity-api
+      - BASKET_URL=http://basket-api
+      - ORDER_URL=http://order-api
+      - MENU_URL=http://menu-api
+  
   order-api:
     environment:
       - REGISTRY_HOST=service-discovery
@@ -15,7 +18,6 @@ services:
 
   basket-api:
     environment:
-      - EUREKA_CLIENT_SERVICE_URL=http://service-discovery:8761/eureka
       - REDIS_HOST=redis
       - ExternalIdentityUrl=http://localhost:8080/identity
   
@@ -30,8 +32,6 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ConnectionStrings__MenuDatabaseConnectionString=Host=pgsql;Database=menu_database;Username=admin;Password=Passw0rd!
-      - eureka__client__serviceUrl=http://service-discovery:8761/eureka/
-      - eureka__instance__port=80
       - PATH_BASE=/menu
       - ExternalIdentityUrl=http://localhost:8080/identity
       - InternalIdentityUrl=http://identity-api
@@ -40,8 +40,6 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ConnectionStrings__IdentityConnectionString=Host=pgsql;Database=identity_database;Username=admin;Password=Passw0rd!
-      - eureka__client__serviceUrl=http://service-discovery:8761/eureka/
-      - eureka__instance__port=80
       - PATH_BASE=/identity
       - MENU_API_URL=http://localhost:8080/menu
       - ORDER_API_URL=http://localhost:8080/order
