--- a/src/Server/k8s/deployement.yml
+++ b/src/Server/k8s/deployement.yml
@@ -1,11 +1,109 @@
-apiVersion: apps/v1
+apiVersion: extensions/v1beta1
+kind: Deployment
+metadata:
+  name: gateway-api
+spec:
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        app: gateway-api
+    spec:
+      containers:
+      - image: jurabek/gateway
+        name: gateway-api
+        ports:
+        - containerPort: 8080
+        env:
+        - name: IDENTITY_URL
+          value: http://identity-api
+        - name: BASKET_URL
+          value: http://basket-api
+        - name: ORDER_URL
+          value: http://order-api
+        - name: MENU_URL
+          value: http://menu-api
+        resources: {}
+        livenessProbe:
+          httpGet:
+            path: /actuator/health
+            port: 8080
+          initialDelaySeconds: 50
+          timeoutSeconds: 5
+          periodSeconds: 15
+        readinessProbe:
+          httpGet:
+            path: /actuator/health
+            port: 8080
+          initialDelaySeconds: 50
+          timeoutSeconds: 5
+          periodSeconds: 15
+
+---
+apiVersion: extensions/v1beta1
+kind: Deployment
+metadata:
+  name: basket-api
+spec:
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        app: basket-api
+    spec:
+      containers:
+      - image: jurabek/basket
+        name: basket-api
+        ports:
+        - containerPort: 5200
+        env:
+        - name: ExternalIdentityUrl
+          value: http://localhost:8080/identity
+        - name: REDIS_HOST
+          value: redis
+        resources: {}
+
+---
+apiVersion: extensions/v1beta1
+kind: Deployment
+metadata:
+  name: identity-api
+spec:
+  replicas: 1
+  template:
+    metadata:
+      labels:
+        app: identity-api
+    spec:
+      containers:
+      - name: identity-api 
+        ports:
+        - containerPort: 80
+        image: jurabek/identity
+        env:
+        - name: ASPNETCORE_ENVIRONMENT
+          value: Development
+        - name: BASKET_API_URL
+          value: http://localhost:8080/basket
+        - name: ConnectionStrings__IdentityConnectionString
+          value: Host=pgsql-data;Database=identity_database;Username=admin;Password=Passw0rd!
+        - name: ExternalIdentityUrl
+          value: http://localhost:8080/identity
+        - name: MENU_API_URL
+          value: http://localhost:8080/menu
+        - name: ORDER_API_URL
+          value: http://localhost:8080/order
+        - name: PATH_BASE
+          value: /identity
+        resources: {}
+
+---
+apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: menu-api
 spec:
-  selector:
-    matchLabels:
-      app: menu-api
+  replicas: 1
   template:
     metadata:
       labels:
@@ -13,34 +111,47 @@ spec:
     spec:
       containers:
       - name: menu-api
-        image: jurabek/menu-api
-        resources:
-          limits:
-            memory: "128Mi"
-            cpu: "500m"
+        image: jurabek/menu
         ports:
-        - containerPort: 5000
+          - containerPort: 80
+        resources: {}
+        env:
+        - name: ASPNETCORE_ENVIRONMENT
+          value: Development
+        - name: ConnectionStrings__MenuDatabaseConnectionString
+          value: Host=pgsql-data;Database=menu_database;Username=admin;Password=Passw0rd!
+        - name: ExternalIdentityUrl
+          value: http://localhost:8080/identity
+        - name: InternalIdentityUrl
+          value: http://identity-api
+        - name: PATH_BASE
+          value: /menu
 
 ---
-apiVersion: apps/v1
+apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: basket-api
+  name: order-api
 spec:
-  selector:
-    matchLabels:
-      app: basket-api
+  replicas: 1
+  strategy: {}
   template:
     metadata:
       labels:
-        app: basket-api
+        app: order-api
     spec:
       containers:
-      - name: basket-api
-        image: jurabek/basket-api
-        resources:
-          limits:
-            memory: "128Mi"
-            cpu: "500m"
+      - image: jurabek/order
+        name: order-api
         ports:
-        - containerPort: 5001
+          - containerPort: 8090
+        env:
+        - name: ExternalIdentityUrl
+          value: http://localhost:8080/identity
+        - name: SPRING_DATASOURCE_PASSWORD
+          value: Passw0rd!
+        - name: SPRING_DATASOURCE_URL
+          value: jdbc:postgresql://pgsql-data:5432/orderdb
+        - name: SPRING_DATASOURCE_USERNAME
+          value: admin 
+        resources: {}
