--- a/src/Server/k8s/services.yml
+++ b/src/Server/k8s/services.yml
@@ -1,7 +1,62 @@
 apiVersion: v1
 kind: Service
 metadata:
+  name: gateway-api
+spec:
+  type: NodePort
+  ports:
+  - nodePort: 30002
+    port: 8080
+    targetPort: 8080
+  selector:
+    app: gateway-api
+
+---
+apiVersion: v1
+kind: Service
+metadata:
   name: menu-api
 spec:
+  type: ClusterIP
+  ports:
+  - port: 80
   selector:
     app: menu-api
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: basket-api
+spec:
+  type: ClusterIP
+  ports:
+  - port: 80
+    targetPort: 5200
+  selector:
+    app: basket-api
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: order-api
+spec:
+  type: ClusterIP
+  ports:
+  - port: 80
+    targetPort: 8090
+  selector:
+    app: order-api
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: identity-api
+spec:
+  type: ClusterIP
+  ports:
+  - port: 80
+  selector:
+    app: identity-api
