--- a/src/Server/services/menu.api/Menu.API/appsettings.json
+++ b/src/Server/services/menu.api/Menu.API/appsettings.json
@@ -9,22 +9,5 @@
             "System": "Information"
         }
     },
-    "AllowedHosts": "*",
-
-    "spring": {
-        "application": {
-            "name": "menu-service"
-        }
-    },
-    "eureka": {
-        "client": {
-            "serviceUrl": "http://localhost:8761/eureka/",
-            "shouldRegisterWithEureka": true,
-            "shouldFetchRegistry": false,
-            "ValidateCertificates": false
-        },
-        "instance": {
-            "port": 5000
-        }
-    }
+    "AllowedHosts": "*"
 }
