--- a/src/Server/k8s/services.yml
+++ b/src/Server/k8s/services.yml
@@ -3,10 +3,9 @@ kind: Service
 metadata:
   name: gateway-api
 spec:
-  type: NodePort
+  type: ClusterIP
   ports:
-  - nodePort: 30002
-    port: 8080
+  - port: 80
     targetPort: 8080
   selector:
     app: gateway-api
