Restaurant-Droid armabi removed
Former-commit-id: 359536ed7bda100ffa9a0cd73afcaf873664afff
Former-commit-id: 1553f8c832f2d8f601b50f273c546aeae952e6f1 [formerly d822d97da1d96fe2d40ee1b54631d8c582bff164]
Former-commit-id: c444f03127abefbd25fb997156af70d1120ca44e

--- a/src/Client/Restaurant.Client/Restaurant.Droid/Restaurant.Droid.csproj
+++ b/src/Client/Restaurant.Client/Restaurant.Droid/Restaurant.Droid.csproj
@@ -33,7 +33,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>3</WarningLevel>
     <EmbedAssembliesIntoApk>false</EmbedAssembliesIntoApk>
-    <AndroidSupportedAbis>x86;x86_64;arm64-v8a;armeabi-v7a</AndroidSupportedAbis>
+    <AndroidSupportedAbis>x86;x86_64;arm64-v8a</AndroidSupportedAbis>
     <Debugger>Xamarin</Debugger>
     <DevInstrumentationEnabled>True</DevInstrumentationEnabled>
     <PlatformTarget>AnyCPU</PlatformTarget>
