--- a/src/Server/k8s/ingress.yml
+++ b/src/Server/k8s/ingress.yml
@@ -5,12 +5,26 @@ metadata:
     app: frontend
   name: restaurant-ingress
   annotations:
-    ingress.kubernetes.io/ssl-redirect: "false"  
+    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
   rules:
+  - host: local-restaurant-app
   - http:
       paths:
-      - path: /
+      - path: /menu
         backend:
-          serviceName: gateway-api
+          serviceName: menu-api
+          servicePort: 80
+      - path: /basket
+        backend:
+          serviceName: basket-api
+          servicePort: 80
+      - path: /identity
+        backend:
+          serviceName: identity-api
+          servicePort: 80
+      - path: /order
+        backend:
+          serviceName: order-api
           servicePort: 80
