--- a/src/Server/k8s/redis-data.yml
+++ b/src/Server/k8s/redis-data.yml
@@ -1,3 +1,4 @@
+---
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
@@ -16,13 +17,12 @@ spec:
         resources:
 
 ---
----
 apiVersion: v1
 kind: Service
 metadata:
   labels:
     app: basket-cache
-  name: pgsql-data
+  name: redis-data
 spec:
   ports:
   - port: 5432
