Gitlab mono repo features running pipelines when needed
Former-commit-id: 42d3a36eb06d835018097d319fc2218ffdc162c5
Former-commit-id: 06bec4e6611b12a658cb44639a533cad6ca0746b [formerly b9f31e1bdee29c14fe4e8e8bf6eee891cfc79a4d]
Former-commit-id: 44eb345d1e4af6597ee0fb4929c7f307011db273

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,6 +56,9 @@ build:basket_api:
     key: go-cache
     paths:
       - go
+  only:
+    changes:
+      - src/Server/services/basket.api/**/*
   
 build:order_api:
   image: openjdk:8-jdk-alpine
@@ -73,6 +76,9 @@ build:order_api:
     paths:
      - .gradle/wrapper
      - .gradle/caches
+  only:
+    changes:
+      - src/Server/services/order.api/**/*
 
 build:identity_api:
   image: microsoft/dotnet:2.2-sdk-alpine
@@ -89,6 +95,9 @@ build:identity_api:
     key: dotnet-cache
     paths:
       - .nuget/
+  only:
+    changes:
+      - src/Server/services/identity.api/**/*
 
 build:menu_api:
   image: microsoft/dotnet:2.2-sdk-alpine
@@ -105,6 +114,9 @@ build:menu_api:
     key: dotnet-cache
     paths:
       - .nuget/
+  only:
+    changes:
+      - src/Server/services/menu.api/**/*
 
 test:basket_api:
   image: golang:1.11-alpine
