--- a/src/Server/services/identity.api/Identity.API/appsettings.Development.json
+++ b/src/Server/services/identity.api/Identity.API/appsettings.Development.json
@@ -2,6 +2,7 @@
     "MENU_API_URL": "http://localhost:5000",
     "BASKET_API_URL": "http://localhost:5050",
     "ORDER_API_URL": "http://localhost:8090",
+    "OrchestrationType": "Local",
     "ConnectionStrings": {
         "IdentityConnectionString": "Host=localhost;Database=identity_database;Username=jurabek;"
     },
