--- a/src/Server/k8s/deployment.yml
+++ b/src/Server/k8s/deployment.yml
@@ -20,7 +20,7 @@ spec:
           value: http://localhost/identity
         - name: REDIS_HOST
           value: redis
-        resources: {}
+        resources:
 
 ---
 apiVersion: extensions/v1beta1
@@ -50,6 +50,8 @@ spec:
           value: http://localhost/menu
         - name: ORDER_API_URL
           value: http://localhost/order
+        - name: OrchestrationType
+          value: k8s
         - name: PATH_BASE
           value: /identity
         - name: ConnectionStrings__IdentityConnectionString
@@ -57,7 +59,7 @@ spec:
             configMapKeyRef:
               name: local-config
               key: identity__ConnectionString
-        resources: {}
+        resources:
 
 ---
 apiVersion: extensions/v1beta1
@@ -76,21 +78,23 @@ spec:
         image: jurabek/menu
         ports:
           - containerPort: 80
-        resources: {}
         env:
         - name: ASPNETCORE_ENVIRONMENT
           value: Development
         - name: PATH_BASE
           value: /menu
+        - name: OrchestrationType
+          value: k8s
         - name: ConnectionStrings__MenuDatabaseConnectionString
           valueFrom:
            configMapKeyRef:
              name: local-config
              key: menu__ConnectionString
         - name: ExternalIdentityUrl
-          value: http://localhost:8080/identity
+          value: http://localhost/identity
         - name: InternalIdentityUrl
           value: http://identity-api
+        resources:
         
 ---
 apiVersion: extensions/v1beta1
@@ -128,9 +132,7 @@ spec:
             configMapKeyRef:
               name: local-config
               key: order__DataSourceUserName 
-        resources: {}
-
-
+        resources:
 
 
 ---
