--- a/src/Server/services/menu.api/Menu.API/appsettings.Development.json
+++ b/src/Server/services/menu.api/Menu.API/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
     "ExternalIdentityUrl": "http://localhost:5100",
     "InternalIdentityUrl": "http://localhost:5100",
+    "OrchestrationType": "Local",
     "ConnectionStrings": {
         "MenuDatabaseConnectionString": "Host=localhost;Database=restaurant_menu_database;Username=jurabek;"
     },
