Gitlab mono repo features running pipelines when needed
Former-commit-id: 2908a12ba4f7876336ea1d3b6878e4bae8aff8d6
Former-commit-id: 0ba81451135ad0567ecd51f9771f0d2155a9c529 [formerly 1b8076c45b108ef5218292160703e0dfa64d753a]
Former-commit-id: f3b39375213530cbc983fa252d3bcf081ef0e9d8

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,6 +39,9 @@ build:gateway_api:
      - .gradle/wrapper
      - .gradle/caches
     policy: pull
+  only:
+    changes:
+      - src/Server/gateway/restaurant-gateway/**/*
     
 build:basket_api:
   image: golang:1.11-alpine
