Xamarin Android build failing
Former-commit-id: 8ade6e40d681c425d1d1ccd382ecaa947586d5d3
Former-commit-id: 6e4033fc31e7a656dcc01724799768bc3be8581e [formerly 8c7604431b65409c7c23be4a7fcbf9c7a2bc553b]
Former-commit-id: ee0877d218eb1cf1583d44d66b9ee46118c039fa

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -133,6 +133,9 @@ test:basket_api:
     policy: pull
     paths:
       - go
+  only:
+    changes:
+      - src/Server/services/basket.api/**/*
 
 test:identity_api:
   image: microsoft/dotnet:2.2-sdk-alpine
@@ -146,6 +149,9 @@ test:identity_api:
     policy: pull
     paths:
       - .nuget/
+  only:
+    changes:
+      - src/Server/services/identity.api/**/*
 
 test:menu_api:
   image: microsoft/dotnet:2.2-sdk-alpine
@@ -159,6 +165,9 @@ test:menu_api:
     policy: pull
     paths:
       - .nuget/
+  only:
+    changes:
+      - src/Server/services/menu.api/**/*
 
 test:order_api:
   image: openjdk:8-jdk-alpine
@@ -173,4 +182,6 @@ test:order_api:
     paths:
      - .gradle/wrapper
      - .gradle/caches
-
+  only:
+    changes:
+      - src/Server/services/order.api/**/*
