Update azure-pipelines.yml for iOS and Android
Former-commit-id: 461e92e47d77cf280bc5a3f06d4b612bc8e946cd
Former-commit-id: cb29d47b79fe8175c5f77a3c5e4e06d779bb5329 [formerly 79057b41437405cef25206ec010a2b0ff5e6f209]
Former-commit-id: 876dbf7fc2e951ca5e2425d06bad010c0a79a6a5

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,14 +6,37 @@
 trigger:
 - develop
 
-pool:
-  vmImage: 'ubuntu-latest'
+jobs:
+- job: Android
+  pool:
+    vmImage: 'vs2017-win2016'
+  variables:
+    buildConfiguration: 'Release'
+    outputDirectory: '$(build.binariesDirectory)/$(buildConfiguration)'
+  steps:
+  - task: NuGetToolInstaller@0
+  - task: NuGetCommand@2
+    inputs:
+      restoreSolution: '**/Restaurant.Client.sln'
+  - task: XamarinAndroid@1
+    inputs:
+      projectFile: '**/*droid*.csproj'
+      outputDirectory: '$(outputDirectory)'
+      configuration: '$(buildConfiguration)'
 
-steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
-
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+- job: iOS
+  pool:
+    vmImage: 'macOS-10.13'
+  variables:
+    buildConfiguration: 'Release'
+  steps:
+  - task: NuGetToolInstaller@0
+  - task: NuGetCommand@2
+    inputs:
+      restoreSolution: '**/*.sln'
+  - task: XamariniOS@2
+    inputs:
+      solutionFile: '**/*iOS.csproj'
+      configuration: '$(buildConfiguration)'
+      buildForSimulator: true
+      packageApp: false
