Update azure-pipelines.yml for Azure Pipelines
Former-commit-id: 69b0e879b8022dde81acbcc6ad97760f80568d13
Former-commit-id: 8bb001718d7bc67266eb441e3d5f69a23f5107cd [formerly 1f10c4e746fe60ccb892260024736d64c862f4ef]
Former-commit-id: 2317dee69b3b1be6445c328bec91e7c8146ba60c

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,13 @@
 # https://aka.ms/yaml
 
 trigger:
-- develop
+  branches:
+    include:
+    - develop
+  paths:
+    include:
+    - src/Client/*
+    - azure-pipelines.yml
 
 jobs:
 - job: Android
@@ -20,7 +26,7 @@ jobs:
       restoreSolution: '**/Restaurant.Client.sln'
   - task: XamarinAndroid@1
     inputs:
-      projectFile: '**/*droid*.csproj'
+      projectFile: '**/Restaurant.Droid.csproj'
       outputDirectory: '$(outputDirectory)'
       configuration: '$(buildConfiguration)'
 
@@ -33,10 +39,10 @@ jobs:
   - task: NuGetToolInstaller@0
   - task: NuGetCommand@2
     inputs:
-      restoreSolution: '**/*.sln'
+      restoreSolution: '**/Restaurant.Client.sln'
   - task: XamariniOS@2
     inputs:
-      solutionFile: '**/*iOS.csproj'
+      solutionFile: '**/Restaurant.iOS.csproj'
       configuration: '$(buildConfiguration)'
       buildForSimulator: true
       packageApp: false
