azure pipelines vmImages updated
Former-commit-id: 71f94f6a8c7e64d2a852a706f8c69edc8a9c0eac
Former-commit-id: da0b36b216a27693896291cced5270d3e30fb162 [formerly 772d839baeaa9a444fd5b656146b218a1143057a]
Former-commit-id: f8ed8e652aca1b9dae337586a6929f1d9853c71a

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,7 +15,7 @@ trigger:
 jobs:
 - job: Android
   pool:
-    vmImage: 'vs2017-win2016'
+    vmImage: 'windows-latest'
   variables:
     buildConfiguration: 'Release'
     outputDirectory: '$(build.binariesDirectory)/$(buildConfiguration)'
@@ -32,7 +32,7 @@ jobs:
 
 - job: iOS
   pool:
-    vmImage: 'macOS-10.13'
+    vmImage: 'macOS-latest'
   variables:
     buildConfiguration: 'Release'
   steps:
