Xamarin Build issue fixing, updated Mono Android
Former-commit-id: 3ca56f53495580a937b9c82cbd86e7f5daee6857
Former-commit-id: b4799da52889fec2dc026840d2d5e292a39e9e8a [formerly 7ce243839a7a6fb311f0fa8ca46f1692fdc0292a]
Former-commit-id: 6aab0903adbf76d371f085da6ad2cfe80fd46d62

--- a/src/Client/Restaurant.Client/Restaurant.Droid/Restaurant.Droid.csproj
+++ b/src/Client/Restaurant.Client/Restaurant.Droid/Restaurant.Droid.csproj
@@ -49,12 +49,6 @@
     <AndroidSupportedAbis>armeabi,armeabi-v7a,x86</AndroidSupportedAbis>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ActionItemBadge">
-      <HintPath>..\..\Libs\ActionItemBadge.dll</HintPath>
-    </Reference>
-    <Reference Include="Iconics.Core">
-      <HintPath>..\..\Libs\Iconics.Core.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Mono.Android" />
     <Reference Include="mscorlib" />
@@ -94,6 +88,10 @@
     <AndroidResource Include="Resources\layout\nav_drawer_header.axml">
       <SubType>Designer</SubType>
     </AndroidResource>
+    <AndroidResource Include="Resources\drawable-mdpi\icon.png" />
+    <AndroidResource Include="Resources\drawable-xhdpi\icon.png" />
+    <AndroidResource Include="Resources\drawable-xxhdpi\icon.png" />
+    <AndroidResource Include="Resources\drawable-xxxhdpi\icon.png" />
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\NLog.config" />
