Update azure-pipelines.yml for Azure Pipelines
Former-commit-id: b0d38fab85e8a7cad2ff1a063061ccd9a5062935
Former-commit-id: 63b5cb0876cc326473a63fff573088de3a5c5989 [formerly f8853aca8d1802e22ce95cd1e9864677c67187aa]
Former-commit-id: d46518a2485a8db7c8a7a3561c303bc690e188c7

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,6 +29,9 @@ jobs:
       projectFile: '**/Restaurant.Droid.csproj'
       outputDirectory: '$(outputDirectory)'
       configuration: '$(buildConfiguration)'
+      msbuildVersionOption: 'latest'
+      msbuildArchitectureOption: 'x64'
+      jdkOption: 'JDKVersion'
 
 - job: iOS
   pool:
@@ -44,5 +47,7 @@ jobs:
     inputs:
       solutionFile: '**/Restaurant.iOS.csproj'
       configuration: '$(buildConfiguration)'
-      buildForSimulator: true
+      clean: true
       packageApp: false
+      buildForSimulator: true
+      runNugetRestore: false
