Update azure-pipelines.yml for Azure Pipelines
Former-commit-id: 49608bec73615f582939356acc9d34b18e3e538e
Former-commit-id: 132b9f9e8addc50fff4924291610461f3e2ed993 [formerly eb5c4ba2548f6a6bdcfa725fc9c8e4699941fd88]
Former-commit-id: 72437552b42e1bfeab11f3f3ed6f6e8f2fb3fa30

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,6 +32,7 @@ jobs:
       msbuildVersionOption: 'latest'
       msbuildArchitectureOption: 'x64'
       jdkOption: 'JDKVersion'
+      msbuildArguments: /p:JavaSdkDirectory="$(JAVA_HOME)/"
 
 - job: iOS
   pool:
