Removed nested projects from the solution
Former-commit-id: 28eb7527d04c648b54775fb3857f96e367f6a2e9
Former-commit-id: c877dc7b0e9fb91acbfbcd8faf85585de4db8917 [formerly da65f04bbe74772bd62de2d1bc50d40fce07bc7d]
Former-commit-id: 1e0af59441f112d3174ffdb6659eaa79b0c2eb47

--- a/src/Client/Restaurant.Client/Restaurant.iOS/Restaurant.iOS.csproj
+++ b/src/Client/Restaurant.Client/Restaurant.iOS/Restaurant.iOS.csproj
@@ -322,12 +322,18 @@
     </PackageReference>
     <PackageReference Include="System.Reflection">
       <Version>4.3.0</Version>
+      <ExcludeAssets>All</ExcludeAssets>
+      <IncludeAssets>none</IncludeAssets>
     </PackageReference>
     <PackageReference Include="System.Reflection.Extensions">
       <Version>4.3.0</Version>
+      <ExcludeAssets>All</ExcludeAssets>
+      <IncludeAssets>none</IncludeAssets>
     </PackageReference>
     <PackageReference Include="System.Reflection.Primitives">
       <Version>4.3.0</Version>
+      <ExcludeAssets>All</ExcludeAssets>
+      <IncludeAssets>none</IncludeAssets>
     </PackageReference>
     <PackageReference Include="System.Resources.ResourceManager">
       <Version>4.3.0</Version>
