--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,6 +40,12 @@ jobs:
   variables:
     buildConfiguration: 'Release'
   steps:
+  - bash: |
+      SYMLINK=6_0_0
+      MONOPREFIX=/Library/Frameworks/Mono.framework/Versions/$SYMLINK
+      echo "##vso[task.setvariable variable=DYLD_FALLBACK_LIBRARY_PATH;]$MONOPREFIX/lib:/lib:/usr/lib:$DYLD_LIBRARY_FALLBACK_PATH"
+      echo "##vso[task.setvariable variable=PKG_CONFIG_PATH;]$MONOPREFIX/lib/pkgconfig:$MONOPREFIX/share/pkgconfig:$PKG_CONFIG_PATH"
+      echo "##vso[task.setvariable variable=PATH;]$MONOPREFIX/bin:$PATH"
   - task: NuGetToolInstaller@0
   - task: NuGetCommand@2
     inputs:
