--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -47,8 +47,8 @@ jobs:
       echo "##vso[task.setvariable variable=DYLD_FALLBACK_LIBRARY_PATH;]$MONOPREFIX/lib:/lib:/usr/lib:$DYLD_LIBRARY_FALLBACK_PATH"
       echo "##vso[task.setvariable variable=PKG_CONFIG_PATH;]$MONOPREFIX/lib/pkgconfig:$MONOPREFIX/share/pkgconfig:$PKG_CONFIG_PATH"
       echo "##vso[task.setvariable variable=PATH;]$MONOPREFIX/bin:$PATH"
-      echo '##vso[task.setvariable variable=MD_APPLE_SDK_ROOT;]'${xcodeRoot};sudo xcode-select --switch ${xcodeRoot}/Contents/Developer"
-      sudo $AGENT_HOMEDIRECTORY/scripts/select-xamarin-sdk.sh 6_0_0
+      sudo $AGENT_HOMEDIRECTORY/scripts/select-xamarin-sdk.sh 6_0_0      
+      echo "##vso[task.setvariable variable=MD_APPLE_SDK_ROOT;]${xcodeRoot};sudo xcode-select --switch ${xcodeRoot}/Contents/Developer"
   - task: NuGetToolInstaller@0
   - task: NuGetCommand@2
     inputs:
