iOS build issue
Former-commit-id: 0e3fc6b91cf4236858db80b8927b34100c21434a
Former-commit-id: a328a17e050c108302358260a2a262fad41404bd [formerly e16436e7617db58bad425d62f413b93004cb2f94]
Former-commit-id: 07af9fe94c8e0281b97a3fa168eb240483f90474

--- a/src/Client/Restaurant.Client/Restaurant.iOS/Info.plist
+++ b/src/Client/Restaurant.Client/Restaurant.iOS/Info.plist
@@ -42,5 +42,7 @@
 	<string>UIStatusBarStyleLightContent</string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>CFBundleName</key>
+	<string>Restaurant.iOS</string>
 </dict>
 </plist>
