--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,14 +41,16 @@ jobs:
     buildConfiguration: 'Release'
   steps:
   - bash: |
-      SYMLINK=5_18_1
+      SYMLINK=6_0_0
       xcodeRoot=/Applications/Xcode_10.3.app
       MONOPREFIX=/Library/Frameworks/Mono.framework/Versions/$SYMLINK
       echo "##vso[task.setvariable variable=DYLD_FALLBACK_LIBRARY_PATH;]$MONOPREFIX/lib:/lib:/usr/lib:$DYLD_LIBRARY_FALLBACK_PATH"
       echo "##vso[task.setvariable variable=PKG_CONFIG_PATH;]$MONOPREFIX/lib/pkgconfig:$MONOPREFIX/share/pkgconfig:$PKG_CONFIG_PATH"
       echo "##vso[task.setvariable variable=PATH;]$MONOPREFIX/bin:$PATH"
       mono --version
-      
+      cat /Library/Frameworks/Xamarin.iOS.framework/Versions/Current/Version
+      ls /Library/Frameworks/Xamarin.iOS.framework/Versions/
+
       # cat $AGENT_HOMEDIRECTORY/scripts/select-xamarin-sdk.sh
       # sudo $AGENT_HOMEDIRECTORY/scripts/select-xamarin-sdk.sh 6_0_0
       
