Update azure-pipelines.yml for Azure Pipelines
Former-commit-id: 4c6f3a28f7a3b57d6c5290f1cb6681a824413c83
Former-commit-id: 727f2d99948ea6f97cdf402995856e0959a2d4e3 [formerly 79a0242898132f12d3133e65a3ad7c080fb0524d]
Former-commit-id: 1f6b8708c7eba72ebee9244c44cb8a2fe8df0616

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,11 +48,13 @@ jobs:
       echo "##vso[task.setvariable variable=PKG_CONFIG_PATH;]$MONOPREFIX/lib/pkgconfig:$MONOPREFIX/share/pkgconfig:$PKG_CONFIG_PATH"
       echo "##vso[task.setvariable variable=PATH;]$MONOPREFIX/bin:$PATH"
       mono --version
-      cat /Library/Frameworks/Xamarin.iOS.framework/Versions/Current/Version
-      ls /Library/Frameworks/Xamarin.iOS.framework/Versions/
-
+      cat /Library/Frameworks/Xamarin.iOS.framework/Versions/6_0_0/Version
+     
       # cat $AGENT_HOMEDIRECTORY/scripts/select-xamarin-sdk.sh
-      # sudo $AGENT_HOMEDIRECTORY/scripts/select-xamarin-sdk.sh 6_0_0
+      sudo $AGENT_HOMEDIRECTORY/scripts/select-xamarin-sdk.sh 6_0_0
+
+      echo "Current SDK changed: "
+      cat /Library/Frameworks/Xamarin.iOS.framework/Current/Version
       
   - task: NuGetToolInstaller@0
   - task: NuGetCommand@2
