--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,19 +42,12 @@ jobs:
   steps:
   - bash: |
       SYMLINK=6_0_0
-      xcodeRoot=/Applications/Xcode_10.3.app
       MONOPREFIX=/Library/Frameworks/Mono.framework/Versions/$SYMLINK
       echo "##vso[task.setvariable variable=DYLD_FALLBACK_LIBRARY_PATH;]$MONOPREFIX/lib:/lib:/usr/lib:$DYLD_LIBRARY_FALLBACK_PATH"
       echo "##vso[task.setvariable variable=PKG_CONFIG_PATH;]$MONOPREFIX/lib/pkgconfig:$MONOPREFIX/share/pkgconfig:$PKG_CONFIG_PATH"
       echo "##vso[task.setvariable variable=PATH;]$MONOPREFIX/bin:$PATH"
-      mono --version
-      cat /Library/Frameworks/Xamarin.iOS.framework/Versions/6_0_0/Version
-     
-      # cat $AGENT_HOMEDIRECTORY/scripts/select-xamarin-sdk.sh
       sudo $AGENT_HOMEDIRECTORY/scripts/select-xamarin-sdk.sh 6_0_0
-
-      echo "Current SDK changed: "
-      cat /Library/Frameworks/Xamarin.iOS.framework/Versions/Current/Version
+  - script: /bin/bash -c "echo '##vso[task.setvariable variable=MD_APPLE_SDK_ROOT;]'/Applications/Xcode_10.3.app;sudo xcode-select --switch /Applications/Xcode_10.3.app/Contents/Developer"
       
   - task: NuGetToolInstaller@0
   - task: NuGetCommand@2
