--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,11 +48,11 @@ jobs:
       echo "##vso[task.setvariable variable=PATH;]$MONOPREFIX/bin:$PATH"
       sudo $AGENT_HOMEDIRECTORY/scripts/select-xamarin-sdk.sh 6_0_0
   - script: /bin/bash -c "echo '##vso[task.setvariable variable=MD_APPLE_SDK_ROOT;]'/Applications/Xcode_10.3.app;sudo xcode-select --switch /Applications/Xcode_10.3.app/Contents/Developer"
-      
-  - task: NuGetToolInstaller@0
-  - task: NuGetCommand@2
+  - task: DotNetCoreCLI@2
     inputs:
-      restoreSolution: '**/Restaurant.Client.sln'
+      command: restore
+      projects: '**/Restaurant.Client.sln'
+
   - task: XamariniOS@2
     inputs:
       solutionFile: '**/Restaurant.iOS.csproj'
