Update azure-pipelines.yml for Azure Pipelines
Former-commit-id: ef3b567f70a8b0643a1c5fb6910007f26b384ea4
Former-commit-id: 32b0098fb6a734e73c1fcd1f8ae89fab2d6b97a4 [formerly 0eaf91cf209b362d0d4c0c06cf5f294dd471d094]
Former-commit-id: 6bc397d935396dba5c0a98b8287fde57a5995aee

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,3 +56,8 @@ jobs:
   - task: XamariniOS@2
     inputs:
       solutionFile: '**/Restaurant.iOS.csproj'
+      configuration: 'Release'
+      clean: true
+      packageApp: true
+      buildForSimulator: true
+      runNugetRestore: true
