--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,9 +22,11 @@ jobs:
   steps:
   - task: NuGetToolInstaller@0
   - task: NuGetCommand@2
+    enabled: false
     inputs:
       restoreSolution: '**/Restaurant.Client.sln'
   - task: XamarinAndroid@1
+    enabled: false
     inputs:
       projectFile: '**/Restaurant.Droid.csproj'
       outputDirectory: '$(outputDirectory)'
@@ -48,10 +50,11 @@ jobs:
       echo "##vso[task.setvariable variable=PATH;]$MONOPREFIX/bin:$PATH"
       sudo $AGENT_HOMEDIRECTORY/scripts/select-xamarin-sdk.sh 6_0_0
   - script: /bin/bash -c "echo '##vso[task.setvariable variable=MD_APPLE_SDK_ROOT;]'/Applications/Xcode_10.3.app;sudo xcode-select --switch /Applications/Xcode_10.3.app/Contents/Developer"
-  - task: DotNetCoreCLI@2
-    inputs:
-      command: restore
-      projects: '**/Restaurant.Client.sln'
+ 
+  # - task: DotNetCoreCLI@2
+  #   inputs:
+  #     command: restore
+  #     projects: '**/Restaurant.Client.sln'
 
   - task: XamariniOS@2
     inputs:
