Update azure-pipelines.yml for Azure Pipelines
Former-commit-id: 50b3d084ce0e768be727e812fd0b9e1c8e2cdaf0
Former-commit-id: b45088cc0aaed9d330a2d85f11abb71a029b02f5 [formerly bea67b3141fd8a76ccb434430d995b71a887f53a]
Former-commit-id: 2130047cd9643cd3c278b31250eeaeb9ccf51712

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,9 +49,8 @@ jobs:
       echo "##vso[task.setvariable variable=PKG_CONFIG_PATH;]$MONOPREFIX/lib/pkgconfig:$MONOPREFIX/share/pkgconfig:$PKG_CONFIG_PATH"
       echo "##vso[task.setvariable variable=PATH;]$MONOPREFIX/bin:$PATH"
       sudo $AGENT_HOMEDIRECTORY/scripts/select-xamarin-sdk.sh 6_0_0
-      echo "##vso[task.setvariable variable=MD_APPLE_SDK_ROOT;]/Applications/Xcode_10.3.app;sudo xcode-select --switch /Applications/Xcode_10.3.app/Contents/Developer"
-      xcode-select -p
     displayName: Selecting Xamarin.iOS
+  # - script: /bin/bash -c "echo '##vso[task.setvariable variable=MD_APPLE_SDK_ROOT;]'/Applications/Xcode_10.3.app;sudo xcode-select --switch /Applications/Xcode_10.3.app/Contents/Developer"
     
   - task: NuGetToolInstaller@0
   - task: NuGetCommand@2
