--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,9 +53,13 @@ jobs:
   # - script: /bin/bash -c "echo '##vso[task.setvariable variable=MD_APPLE_SDK_ROOT;]'/Applications/Xcode_10.3.app;sudo xcode-select --switch /Applications/Xcode_10.3.app/Contents/Developer"
     
   - task: NuGetToolInstaller@0
+    inputs:
+      versionSpec: '4.3.0'
+      checkLatest: true
+
   - task: NuGetCommand@2
     inputs:
-      restoreSolution: '**/Restaurant.iOS.csproj'
+      restoreSolution: '**/Restaurant.Client.sln'
       
   - task: XamariniOS@2
     inputs:
