Update azure-pipelines.yml for Azure Pipelines
Former-commit-id: e56df973fb561e66263f49a05fa03c4f07b68d28
Former-commit-id: 3d0c058841360b3db35ff52b5a2adfde6da63b5b [formerly c07e3a2b547230dda9842affa98b1a3bf7c3ed2e]
Former-commit-id: fdabdd195fc368841d4c1ade3c6bbe1ccd3d097f

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,12 +51,18 @@ jobs:
       sudo $AGENT_HOMEDIRECTORY/scripts/select-xamarin-sdk.sh 6_0_0
     displayName: Selecting Xamarin.iOS
   # - script: /bin/bash -c "echo '##vso[task.setvariable variable=MD_APPLE_SDK_ROOT;]'/Applications/Xcode_10.3.app;sudo xcode-select --switch /Applications/Xcode_10.3.app/Contents/Developer"
+  
+
+
+  - task: DotNetCoreInstaller@0
+    inputs:
+      version: '2.2.301'
+  - task: UseDotNet@2
+    inputs:
+      packageType: 'sdk'
+      version: '2.2.301'
     
   - task: NuGetToolInstaller@0
-    inputs:
-      versionSpec: '4.3.0'
-      checkLatest: true
-
   - task: NuGetCommand@2
     inputs:
       restoreSolution: '**/Restaurant.Client.sln'
