--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -71,4 +71,5 @@ jobs:
     inputs:
       solutionFile: '**/Restaurant.iOS.csproj'
       configuration: 'Release'
-      clean: true
+      packageApp: false
+      runNugetRestore: false
