--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,7 +53,6 @@ jobs:
   # - script: /bin/bash -c "echo '##vso[task.setvariable variable=MD_APPLE_SDK_ROOT;]'/Applications/Xcode_10.3.app;sudo xcode-select --switch /Applications/Xcode_10.3.app/Contents/Developer"
   
 
-
   - task: DotNetCoreInstaller@0
     inputs:
       version: '2.2.301'
@@ -71,5 +70,5 @@ jobs:
     inputs:
       solutionFile: '**/Restaurant.iOS.csproj'
       configuration: 'Release'
+      buildForSimulator: true
       packageApp: false
-      runNugetRestore: false
