Update azure-pipelines.yml for Azure Pipelines
Former-commit-id: 826f36b7e09433c0fd2d1ea2386fbe32b3ff92f9
Former-commit-id: 358c9e18e6862bff8596bf30e82a34226fcb0d31 [formerly 19f7de4344366a175b8483cb2c9531b889114769]
Former-commit-id: 99dc7385c672aa78fb746acf5b80f478c7ed9fd5

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ jobs:
   steps:
   - task: CacheBeta@0
     inputs:
-      key: nuget | packages.lock.json
+      key: packages.lock.json
       path: $(NUGET_PACKAGES)
     displayName: Cache NuGet packages
 
@@ -50,7 +50,7 @@ jobs:
   steps:
   - task: CacheBeta@0
     inputs:
-      key: nuget | packages.lock.json
+      key: packages.lock.json
       path: $(NUGET_PACKAGES)
     displayName: Cache NuGet packages
     
@@ -62,8 +62,7 @@ jobs:
       echo "##vso[task.setvariable variable=PATH;]$MONOPREFIX/bin:$PATH"
       sudo $AGENT_HOMEDIRECTORY/scripts/select-xamarin-sdk.sh 6_0_0
     displayName: Selecting Xamarin.iOS
-  # - script: /bin/bash -c "echo '##vso[task.setvariable variable=MD_APPLE_SDK_ROOT;]'/Applications/Xcode_10.3.app;sudo xcode-select --switch /Applications/Xcode_10.3.app/Contents/Developer"
-  
+    
   - task: DotNetCoreInstaller@0
     inputs:
       version: '2.2.301'
