Update azure-pipelines.yml for Azure Pipelines
Former-commit-id: 58f456f5a0e09cde64e81399ef17177da1687f5b
Former-commit-id: a18ae2581ccacc15a35bef73d3331b5b54722fb6 [formerly f071fc810d7ef6da9a4ab519ddf1d81aa33c911b]
Former-commit-id: b123472bc7f2eeedde8ffba665bc62816aa6b97c

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,9 @@ jobs:
   steps:
   - task: CacheBeta@0
     inputs:
-      key: packages.lock.json
+      key: |
+        $(Agent.OS)
+        $(Build.SourcesDirectory)
       path: $(NUGET_PACKAGES)
     displayName: Cache NuGet packages
 
@@ -50,7 +52,9 @@ jobs:
   steps:
   - task: CacheBeta@0
     inputs:
-      key: packages.lock.json
+      key: |
+        $(Agent.OS)
+        $(Build.SourcesDirectory)
       path: $(NUGET_PACKAGES)
     displayName: Cache NuGet packages
     
