Azure pipelines added nuget cache
Former-commit-id: 69eeec96bbab553f8ad095366c115f5588a694cd
Former-commit-id: 0a61d1028906def0b547103bb6b5c82a310ad05e [formerly b112bc2a86f892e9b2f8fd1dfc26efa7e7678b55]
Former-commit-id: d7ba8321d777c23a2b3419dabfb1a072e9a90099

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,13 +26,13 @@ jobs:
   - task: NuGetCommand@2
     inputs:
       restoreSolution: '**/Restaurant.Client.sln'
-  - task: CacheBeta@0
-    inputs:
-      key: |
-        $(Agent.OS)
-        $(Build.SourcesDirectory)
-      path: $(NUGET_PACKAGES)
-    displayName: Cache NuGet packages
+  # - task: CacheBeta@0
+  #   inputs:
+  #     key: |
+  #       $(Agent.OS)
+  #       $(Build.SourcesDirectory)
+  #     path: $(NUGET_PACKAGES)
+  #   displayName: Cache NuGet packages
   - task: XamarinAndroid@1
     inputs:
       projectFile: '**/Restaurant.Droid.csproj'
@@ -71,13 +71,13 @@ jobs:
   - task: NuGetCommand@2
     inputs:
       restoreSolution: '**/Restaurant.Client.sln'
-  - task: CacheBeta@0
-    inputs:
-      key: |
-        $(Agent.OS)
-        $(Build.SourcesDirectory)
-      path: $(NUGET_PACKAGES)
-    displayName: Cache NuGet packages
+  # - task: CacheBeta@0
+  #   inputs:
+  #     key: |
+  #       $(Agent.OS)
+  #       $(Build.SourcesDirectory)
+  #     path: $(NUGET_PACKAGES)
+  #   displayName: Cache NuGet packages
   - task: XamariniOS@2
     inputs:
       solutionFile: '**/Restaurant.iOS.csproj'
