Xamarin.Forms code improvements
Former-commit-id: 1dd2bc7d400f7ab2783193d86c102aefad82a98d
Former-commit-id: 621ba064a886f73eae64ed1743fe971f24e9d1ce [formerly 5c2f4873b44e75dd9063cb6d48cabf26334409da]
Former-commit-id: cbedca7b5077f897d9895d1ff137f5ec21868a53

--- a/src/Client/Restaurant.Client/Restaurant.Core/Restaurant.Core.csproj
+++ b/src/Client/Restaurant.Client/Restaurant.Core/Restaurant.Core.csproj
@@ -15,4 +15,8 @@
   <ItemGroup>
     <ProjectReference Include="..\Restaurant.Abstractions\Restaurant.Abstractions.csproj" />
   </ItemGroup>
+    <ItemGroup>
+        <Folder Include="Publishers"/>
+        <Folder Include="Subscribers"/>
+    </ItemGroup>
 </Project>
