--- a/src/Client/Xamarin.Android.Badge/ActionItemBadge/ActionItemBadge.csproj
+++ b/src/Client/Xamarin.Android.Badge/ActionItemBadge/ActionItemBadge.csproj
@@ -40,9 +40,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Jars\AboutJars.txt" />
     <None Include="Additions\AboutAdditions.txt" />
-    <LibraryProjectZip Include="Jars\library.aar" />
   </ItemGroup>
   <ItemGroup>
     <TransformFile Include="Transforms\Metadata.xml" />
@@ -50,10 +48,7 @@
     <TransformFile Include="Transforms\EnumMethods.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Iconics.Core\Iconics.Core.csproj">
-      <Project>{5cd4e60d-6382-4297-a8f4-863710f303ec}</Project>
-      <Name>Iconics.Core</Name>
-    </ProjectReference>
+    <EmbeddedJar Include="Jars\library-sources.jar" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.Bindings.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
